--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "REST API backend system for Fermata Music Course management using Node.js, Express, and MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set NODE_ENV=test&& mocha --require dotenv/config test/**/*.test.js --exit --timeout 10000",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Qwwn/fermata-backend.git"
@@ -26,9 +27,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.15.2"
+    "pdfkit": "^0.15.2",
+    "sinon": "^19.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "chai": "^4.5.0",
+    "chai-http": "^4.4.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.8.2",
+    "mongodb-memory-server": "^9.1.3",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
