--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.2",
+    "redis": "^4.7.0",
     "sinon": "^19.0.2"
   },
   "devDependencies": {
